<resources>
    <string name="msg_internet_connection">Please check your internet connection</string>
    <string name="app_name">EazeWork</string>
    <string name="valid_image">Please upload valid image</string>
    <string name="app_empty_string"></string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="enter_username">Please Enter UserName</string>
    <string name="enter_password">Please Enter Password</string>
    <string name="confirm_password">Please Enter Confirm Password</string>
    <string name="current_password">Please Enter Current Password</string>
    <string name="new_password">Please Enter New Password</string>
    <string name="confirm_missmatch_password">Confirm Password and New Password should same</string>
    <string name="enter_url">Please Enter Url</string>
    <string name="pending_with_search">Pending with</string>
    <string name="leave_type">Leave Type</string>
    <string name="request_id_search">Voucher No</string>
    <string name="request_id_search_attendance">Request ID</string>
    <string name="search_emp_code">Employee Code</string>
    <string name="search_emp_name">Employee Name</string>
    <string name="request_type_search_attendance">Request Type</string>
    <string name="date_search">Date</string>
    <string name="request_for_search">Request For</string>
    <string name="voucher_no_search">Voucher No</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">App registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">Too many PendingIntents provided</string>
    <string name="unknown_geofence_error">Unknown error</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="msg_username">Username</string>
    <string name="msg_url">URL</string>
    <string name="msg_password">Password</string>
    <string name="msg_old_password">Current Password</string>
    <string name="msg_new_password">New Password</string>
    <string name="msg_confirm_password">Confirm Password</string>
    <string name="msg_department">Department : </string>
    <string name="msg_role">Designation : </string>
    <string name="msg_employee_id">Employee Code : </string>
    <string name="msg_sign_in">SIGN IN</string>
    <string name="lost_your_password">Lost your password?</string>
    <string name="dont_have_account">Do not have an account - Register for a demo</string>
    <string name="forgot_credentials">Forgot Login Credentials?</string>
    <string name="msg_attandance">Attendance</string>
    <string name="msg_view_profile">View Profile</string>
    <string name="msg_attendance_detail">Attendance Details</string>
    <string name="msg_advance_detail">Check Your Advance</string>
    <string name="advance_balance">Outstanding Advance</string>
    <string name="expense_balance">In Process Expenses</string>
    <string name="open_tickets">Open Tickets</string>
    <string name="msg_mark_attandance">Review History</string>
    <string name="msg_map_screen">Mark Attendance</string>
    <string name="msg_history">Attendance History</string>
    <string name="msg_leaves">Leave</string>
    <string name="leave_attendance">Leave &amp; Attendance</string>
    <string name="msg_location">Location</string>
    <string name="msg_employee">Employee</string>
    <string name="msg_approval">Approval</string>
    <string name="msg_pending_approval">Pending Approval</string>
    <string name="msg_view_leaves">View and update your leaves</string>
    <string name="msg_pay_slip">Payslip</string>
    <string name="msg_check_pay_slip">Check your pay slip</string>
    <string name="msg_today_in_time">Today\'s In-Time</string>
    <string name="msg_today_out_time">Today\'s Out-Time</string>
    <string name="msg_leave_balance">Leave Balance</string>
    <string name="msg_in_time">In Time : </string>
    <string name="msg_out_time">Out Time : </string>
    <string name="msg_last_pay_slip">Last Payslip</string>
    <string name="msg_download">Download</string>
    <string name="msg_manager">Manager</string>
    <string name="msg_team">Team</string>
    <string name="msg_expense">Check Your Expense</string>
    <string name="msg_tickets">Check Your Tickets</string>
    <string name="msg_create_new">Create New</string>
    <string name="msg_team_members">Team Members</string>
    <string name="msg_save">Submit</string>
    <string name="msg_organisation_chart">Organisation Chart</string>
    <string name="msg_sales">Sales and Marketing</string>
    <string name="msg_change_password">Change Password</string>
    <string name="msg_personalize_password">Change your password</string>
    <string name="msg_employee_approve">View Employee Approvals</string>
    <string name="msg_managing_format">Managing : %1$s</string>
    <string name="in_out_time_format">%1$tI:%1$tM %1$Tp</string>
    <string name="in_out_time_format_mini">%1$TH:%1$TM</string>
    <string name="msg_attandance_calendar">Attendance Calendar</string>
    <string name="msg_apply_leave_format">Apply %1$s</string>
    <string name="msg_check_leaves">Check Leaves</string>
    <string name="leave_balance">Leave Balance</string>
    <string name="msg_pending">Pending</string>
    <string name="msg_pending_activity">Pending Activity</string>
    <string name="msg_view_pay_slip">View PaySlip</string>
    <string name="pendinfg_for_approval">Pending for Approval</string>
    <string name="availed_leaves">Approved Leaves</string>
    <string name="consumed_leaves">Consumed Leaves</string>
    <string name="leave_employee_name_format">Employee Name : %1$s</string>
    <string name="leave_from_to_format">From : %1$s  To : %2$s</string>
    <string name="requested_date">Requested On : %1$s </string>
    <string name="request_id">Request ID : </string>
    <string name="request_id_leave">Request ID </string>
    <string name="requested_by">Requested By : </string>
    <string name="leave_work_off_format">Date Worked : %1$s  Compensatory Off Date : %2$s</string>
    <string name="time_in_out_message">Time In/Out Done For Today</string>
    <plurals name="leave_total_days_format">
        <item quantity="one">Total Day : %1$s</item>
        <item quantity="other">Total Days : %1$s</item>
    </plurals>
    <string name="leave_req_id_format">Req ID : %1$s</string>
    <string name="leave_remark_format">Remarks : %1$s</string>
    <string name="apply_for_leave">Apply for leave</string>
    <string name="msg_holiday">Holiday</string>
    <string name="title_home">Home</string>
    <string name="title_pay_slip">Pay Slip</string>
    <string name="title_profile">Profile</string>
    <string name="title_notification">Notifications</string>
    <string name="msg_accept">Approve</string>
    <string name="msg_withdrawal">Withdraw</string>
    <string name="msg_reject">Reject</string>
    <string name="title_logout">Logout</string>
    <string name="version">Version : </string>
    <string name="dlg_confirm">Confirm</string>
    <string name="dlg_ok">Ok</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="msg_break_in">Break-Out</string>
    <string name="msg_break_out">Break-In</string>
    <string name="msg_check_in">Time-In</string>
    <string name="msg_mark">Mark Attendance</string>
    <string name="msg_check_out">Time-Out</string>
    <string name="msg_cancel_out">Cancel Time-Out</string>
    <string name="gps_is_settings">GPS is settings</string>
    <string name="settings">Settings</string>
    <string name="gps_is_not_enabled_Do_you_want_to_go_to_settings_menu">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="expense_claim_home">Expense Claim Summary</string>
    <string name="expense_request_home">Advance Request Summary</string>
    <string name="date">Date</string>
    <string name="reason">Reason</string>
    <string name="category">Category</string>
    <string name="subCategory">Sub Category</string>
    <string name="subject">Subject</string>
    <string name="priority">Priority</string>
    <string name="type">Type</string>
    <string name="currency">Currency</string>
    <string name="balance">Balance</string>
    <string name="pendingWith">Pending With</string>
    <string name="dateWorked">Date Worked</string>
    <string name="status">Status</string>
    <string name="viewBTN">View</string>
    <string name="close">Close Ticket</string>
    <string name="redirect">Redirect</string>
    <string name="actionBTN">Action</string>
    <string name="internal_storage">Internal storage</string>
    <string name="chooser_title">Choose Title</string>
    <string name="voucher_no">Voucher No</string>
    <string name="description">Description</string>
    <string name="feedback">Feedback</string>
    <string name="remarksLimit"></string>
    <string name="remarksLimit1">Remarks should not be more than 250 characters.</string>
    <string name="rating">Rating</string>
    <string name="request_for">Request For</string>
    <string name="amount">Amount</string>
    <string name="save_as_draft">Save As Draft</string>
    <string name="resubmit">Resubmit</string>
    <string name="withdraw">Withdraw</string>
    <string name="details">Details</string>
    <string name="mode">Mode</string>
    <string name="advance_error_msg">There is no advance request pending for your approval.</string>
    <string name="advance_summary_error_msg">There is no in process advance request</string>
    <string name="leave_summary_error_msg">There is no in process of any leave type request</string>
    <string name="time_attendance_summary_error_msg">There is no in-process request</string>
    <string name="leave_approval_error_msg">There is no leave request pending for your approval</string>
    <string name="expense_summary_error_msg">There is no in process expense request</string>
    <string name="expense_error_msg">There is no expense request pending for your approval.</string>
    <string name="attendance_error_msg">There is no attendance request pending for your approval.</string>
    <string name="ticket_error_msg">There are no open tickets for processing.</string>
    <string name="delete_btn">Delete</string>
    <string name="units">Units</string>
    <string name="limit">Limit</string>
    <string name="policy_amount">Amount As Per Policy</string>
    <string name="claim_amount">Claim Amount</string>
    <string name="status_policy">Status</string>
    <string name="request_id_voucher">Request ID</string>
    <string name="ticket_id">Ticket ID</string>
    <string name="ticket_no">Ticket No</string>
    <string name="approved_amount">Approved Amount</string>
    <string name="emp_id">Emp Id</string>
    <string name="emp_code">Emp Code</string>
    <string name="emp_name">Emp Name</string>
    <string name="search_hint">Enter name</string>
    <string name="no_record">No Data Found</string>
    <string name="network_error">No internet connection. Please try again later</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="employee_name">Employee</string>
    <string name="contact">Contact</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>
    <string name="holiday">Holiday</string>
    <string name="day">Day</string>
    <string name="reject_label">Enter Rejection Remarks</string>
</resources>