<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_marginTop="@dimen/margin_default"
              android:background="@drawable/focus_style_gray"
              android:padding="@dimen/margin_default" >

    <TextView
        android:id="@+id/tv_leave_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="" />

    <TextView
        android:id="@+id/tv_leave_employee_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/leave_employee_name_format" />
    <TextView
        android:id="@+id/tv_leave_from_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requested_date" />
    <TextView
        android:id="@+id/tv_request_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/request_id" />
    <TextView
        android:id="@+id/tv_requested_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/requested_by" />
    <TextView
        android:id="@+id/tv_leave_total_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@plurals/leave_total_days_format" />

    <RelativeLayout
        android:id="@+id/ll_approver_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_10"
        android:visibility="visible">
        <TextView

            android:id="@+id/tv_reject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_reject"
            android:textSize="@dimen/font_12"
            android:textColor="@color/white"
            android:paddingTop="@dimen/padding_mini"
            android:paddingBottom="@dimen/padding_mini"
            android:paddingStart="@dimen/margin_10"
            android:paddingEnd="@dimen/margin_10"
            android:layout_alignParentStart="true"
            android:layout_marginRight="@dimen/margin_large"
            android:visibility="visible"
            android:background="@drawable/rounded_corner_accent"/>
        <TextView
            android:id="@+id/tv_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_accept"
            android:layout_alignParentEnd="true"
            android:textSize="@dimen/font_12"
            android:textColor="@color/white"
            android:padding="@dimen/padding_mini"
            android:visibility="visible"
            android:background="@drawable/rounded_corner_light_blue"/>
        <TextView
            android:id="@+id/tv_withdraw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/msg_withdrawal"
            android:layout_alignParentStart="true"
            android:textColor="@color/accent"
            android:layout_marginRight="@dimen/margin_large"
            android:padding="@dimen/padding_mini"
            android:visibility="gone"
            android:background="@drawable/drawer_item_background_selector"/>
    </RelativeLayout>
</LinearLayout>
