<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:padding="@dimen/margin_5"
        android:background="@drawable/focus_style_gray"
        android:id="@+id/holidayHeaderLl">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            style="@style/textView"
            android:gravity="center"
            android:text="@string/holiday"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            style="@style/textView"
            android:gravity="center"
            android:text="@string/date"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            style="@style/textView"
            android:gravity="center"
            android:text="@string/day"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            style="@style/textView"
            android:gravity="center"
            android:text="@string/type"
            />

    </LinearLayout>

    <LinearLayout
        android:paddingTop="@dimen/margin_5"
        android:paddingBottom="@dimen/margin_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin_2"
        android:background="@color/white">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            style="@style/textViewHoliday"
            android:text="hgrfkjhd"
            android:id="@+id/holidayTV"

            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            style="@style/textViewHoliday"
            android:id="@+id/holidayDateTV"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            style="@style/textViewHoliday"
            android:id="@+id/holidayDayTV"

            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            style="@style/textViewHoliday"
            android:id="@+id/holidayDescTV"

            />

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/gradient_line"
        />

</LinearLayout>
