<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

<LinearLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_default"
    android:orientation="vertical"
    android:gravity="center">
    
    <EditText
    android:id="@+id/et_current_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:drawablePadding="@dimen/padding_mini"
    android:padding="@dimen/padding_default"
    android:textSize="@dimen/text_16"
    android:layout_marginTop="@dimen/margin_default"
    android:textColor="?attr/colorAccent"
    android:inputType="textPassword"
    android:fontFamily=""
    android:background="@android:color/transparent"
    android:hint="@string/msg_old_password" >

    <requestFocus />
</EditText>

<View android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/lighter_gray"
    android:layout_marginBottom="@dimen/margin_default"/>
   <EditText
    android:id="@+id/et_new_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="@dimen/text_16"
    android:ems="10"
    android:drawablePadding="@dimen/padding_mini"
    android:textColor="?attr/colorAccent"
    android:inputType="textPassword"
    android:fontFamily=""
    android:layout_marginTop="@dimen/margin_default"
    android:padding="@dimen/padding_default"
    android:background="@android:color/transparent"
    android:hint="@string/msg_new_password" >

</EditText>

<View android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/lighter_gray"
    android:layout_marginBottom="@dimen/margin_default"/>

<EditText
    android:id="@+id/et_confirm_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ems="10"
    android:textSize="@dimen/text_16"
    android:drawablePadding="@dimen/padding_mini"
    android:textColor="?attr/colorAccent"
    android:inputType="textPassword"
    android:fontFamily=""
    android:layout_marginTop="@dimen/margin_default"
    android:padding="@dimen/padding_default"
    android:background="@android:color/transparent"
    android:hint="@string/msg_confirm_password" >
</EditText>

<View android:layout_width="match_parent"
    android:layout_height="1dp"
    android:background="@color/lighter_gray"/>
</LinearLayout>
    <TextView
        android:id="@+id/btn_change_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msg_save"
        android:layout_margin="@dimen/margin_large"
        android:paddingTop="@dimen/padding_mini"
        android:paddingBottom="@dimen/padding_mini"
        android:paddingLeft="@dimen/margin_large"
        android:paddingRight="@dimen/margin_large"
        android:background="@drawable/rounded_corner_light_blue"
        android:textColor="@color/white"
        android:layout_gravity="right|end" />

</LinearLayout>
<include layout="@layout/progress_root_container"/>
</FrameLayout>
