<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <include layout="@layout/header_layout" android:id="@+id/header_layout" android:visibility="visible"></include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_13">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                android:id="@+id/fromDateLabel"
                style="@style/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/units"
                android:textSize="@dimen/font_12" />

            <TextView
                android:id="@+id/unitTV"
                style="@style/textViewYellow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="-"
                android:textSize="@dimen/font_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView
                style="@style/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/limit"
                android:textSize="@dimen/font_12" />

            <TextView
                android:id="@+id/limitTV"
                style="@style/textViewYellow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="-"
                android:textSize="@dimen/font_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView

                style="@style/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/policy_amount"
                android:textSize="@dimen/font_12" />

            <TextView
                android:id="@+id/policyAmountTV"
                style="@style/textViewYellow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="-"
                android:textSize="@dimen/font_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView

                style="@style/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/claim_amount"
                android:textSize="@dimen/font_12" />

            <TextView
                android:id="@+id/claimAmountTV"
                style="@style/textViewYellow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="-"
                android:textSize="@dimen/font_12" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <TextView

                style="@style/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/status"
                android:textSize="@dimen/font_12" />

            <TextView
                android:id="@+id/statusTV"
                style="@style/textViewYellow"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="-"
                android:textSize="@dimen/font_12" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
