<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_default"
    android:background="@drawable/rounded_background_white"
    android:orientation="vertical"
    android:padding="@dimen/margin_default" >

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_default"
        android:text="@string/reject_label"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="@dimen/font_16" />

    <EditText
        android:id="@+id/messageTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_default"
        android:text=""
        android:lines="5"
        android:background="@drawable/focus_style_gray"
        android:textColor="@color/black"
        android:textSize="@dimen/font_12" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_default" >

        <TextView
            android:id="@+id/cancelTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:layout_marginBottom="@dimen/margin_mini"
            android:layout_marginEnd="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_mini"
            android:paddingLeft="@dimen/padding_default"
            android:paddingRight="@dimen/padding_default"
            android:paddingTop="@dimen/padding_mini"
            android:paddingBottom="@dimen/padding_mini"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:text="@string/dlg_cancel"
            android:textColor="@color/white"
            android:clickable="true"
            android:background="@drawable/rounded_corner_accent"/>

        <TextView
            android:id="@+id/okTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|end"
            android:minWidth="@dimen/margin_70"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_mini"
            android:layout_marginTop="@dimen/margin_mini"
            android:paddingLeft="@dimen/margin_5"
            android:paddingRight="@dimen/margin_5"
            android:paddingTop="@dimen/padding_mini"
            android:paddingBottom="@dimen/padding_mini"
            android:text="@string/dlg_ok"
            android:layout_alignParentEnd="true"
            android:textColor="@color/white"
            android:clickable="true"
            android:background="@drawable/rounded_corner_light_blue"/>
    </RelativeLayout>
</LinearLayout>